fixed padding on mobile devices

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -67,7 +67,7 @@ h1 {
     justify-content: center;
     text-align: center;
 
-    padding: 4rem;
+    padding-top: 4rem;
 }
 
 .score {
